<resources>
    <string name="app_name">TransPoint</string>
    <string name="slogan">Where to go ?</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="signOut">Sign Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_conf">Password Confirmation</string>
    <string name="submit">Submit</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="noInternetMessage">You need to have Mobile Data or wifi to use TransPoint. Press ok to Exit</string>
    <string name="ok">OK</string>
    <string name="loading">Loading…</string>
    <string name="fill">Fill Missing Fields</string>
    <string name="noMatch">Password Don\'t Match</string>
    <string name="bussNum">Buss Number : </string>
    <string name="ticketPrice">Ticket Price : </string>
    <string name="path">Buss Stations : </string>
    <string name="sorry">Sorry , No Buss Match For Such Area</string>
</resources>
