<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.magic.projectwadeeny.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="25dp"
        android:background="@drawable/round_rect"
        android:orientation="vertical">


        <TextView

            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textColor="#F2FFFFFF"
            android:textSize="30dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="#F2FFFFFF"
            android:textSize="25dp" />


        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:text="@string/signUp"
            android:theme="@style/MyButton" />

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:text="@string/signIn"
            android:theme="@style/MyButton" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:src="@drawable/ic_language_black_24dp" />
    </LinearLayout>

</RelativeLayout>
