<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.magic.projectwadeeny.SignIn">

    <LinearLayout
        android:id="@+id/contentPain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@drawable/round_rect"
        android:orientation="vertical"
        android:padding="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/emailin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"

                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/passwordin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/buttonin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:theme="@style/MyButton" />
    </LinearLayout>

</RelativeLayout>
